# HashFolder

./: Cargo.toml  README.md
.github/workflows/: cd.yml
src/: byte_size.rs  duplicate_report.rs  errors.rs  hash_data.rs  main.rs  scan_folders.rs  utils.rs
