[package]
name = "hashfolder"
version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_return = "allow"

[dependencies]
clap = { version = "4.5.54", features = ["cargo", "derive"] }
crossterm = "0.29.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
